# nexus-chat

./: .env  README.md  Start.bat  TAURI_SETUP.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChannelSidebar.tsx  MessageArea.tsx  Modals.tsx  ServerRail.tsx
src/hooks/: useMessages.ts  useServers.ts
src/lib/: AuthContext.tsx  avatarUpload.ts  botApi.ts  insforge.ts  updater.ts
src/pages/: AppPage.tsx  AuthPage.tsx
src/types/: index.ts
